--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.activity.MainActivity">
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/main_toolbar"
-        android:background="@color/purple_200"
+        android:background="@color/grey1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
