--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -3,9 +3,9 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 xmlns:app="http://schemas.android.com/apk/res-auto"
-android:layout_margin="@dimen/size15"
-android:background="@color/ItemCharacterCardBackground"
-app:cardCornerRadius="@dimen/size10"
+android:layout_margin="@dimen/size8"
+android:background="@color/RootBackground"
+app:cardCornerRadius="@dimen/size8"
 app:cardElevation="@dimen/size10"
 android:layout_width="match_parent"
 android:layout_height="wrap_content">
@@ -24,7 +24,7 @@ android:layout_height="wrap_content">
     <TextView
         android:id="@+id/txt_name_character"
         android:layout_margin="10dp"
-        android:textColor="@color/ItemCharacterTextColor"
+        android:textColor="@color/white"
         android:layout_gravity="center_vertical"
         android:textSize="@dimen/sp20"
         tools:text="@tools:sample/lorem"
