--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,10 @@
     <dimen name="size10">10dp</dimen>
     <dimen name="sp20">20sp</dimen>
     <dimen name="sp30">30sp</dimen>
+    <dimen name="sp15">15sp</dimen>
+    <dimen name="sp10">10sp</dimen>
+    <dimen name="sp12">12sp</dimen>
+    <dimen name="sp24">24sp</dimen>
+    <dimen name="size25">25dp</dimen>
+    <dimen name="size8">8dp</dimen>
 </resources>
